[FIX] sap.m.ObjectStatus: Icon on Firefox is not cut now
SNOW: DINC0209680
CR-Id: 002075125900002709152024
(cherry picked from commit 34073521229d444f8a4b3a19493fceff5221db3d)

--- a/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
+++ b/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
@@ -380,6 +380,18 @@
 	display: block;
 }
 
+html[data-sap-ui-browser*='ff'] {
+	.sapUiTableCell {
+		.sapMObjStatus:not(.sapMObjStatusInverted) {
+			line-height: 1.125rem;
+
+			.sapMObjStatusIcon > .sapUiIcon {
+				padding-bottom: 0.125rem;
+			}
+		}
+	}
+}
+
 .sapUiTableCell .sapMObjStatusInverted {
 	display: inline-flex;
 }
